--- a/Atrico.Lib.WPF.Tests/Atrico.Lib.WPF.Tests.csproj
+++ b/Atrico.Lib.WPF.Tests/Atrico.Lib.WPF.Tests.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{E7EFF052-726C-443E-866A-025503E5E4C6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Atrico.Lib.Dimensions.Tests</RootNamespace>
-    <AssemblyName>Atrico.Lib.Dimensions.Tests</AssemblyName>
+    <RootNamespace>Atrico.Lib.WPF.Tests</RootNamespace>
+    <AssemblyName>Atrico.Lib.WPF.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -79,6 +79,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Xaml" />
+    <Reference Include="UIAutomationProvider" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
@@ -98,6 +99,10 @@
     <ProjectReference Include="..\..\Atrico.Lib.Assertions\Atrico.Lib.Assertions\Atrico.Lib.Assertions.csproj">
       <Project>{84481d71-f7f0-4c10-87ec-b5717c2860de}</Project>
       <Name>Atrico.Lib.Assertions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Atrico.Lib.Common\Atrico.Lib.Common\Atrico.Lib.Common.csproj">
+      <Project>{983A29AC-8A3B-4D78-81D7-BCAF9B520877}</Project>
+      <Name>Atrico.Lib.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Atrico.Lib.Testing\Atrico.Lib.Testing\Atrico.Lib.Testing.csproj">
       <Project>{ef628ff6-5ee4-4043-82fe-8caf3ab36787}</Project>
