--- a/Atrico.Lib.WPF.Tests/Atrico.Lib.WPF.Tests.csproj
+++ b/Atrico.Lib.WPF.Tests/Atrico.Lib.WPF.Tests.csproj
@@ -93,6 +93,10 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\CommonAssemblyInfo.cs" />
+    <Compile Include="PropertyContainer\TestAttachedPropertyContainerEvents.cs" />
+    <Compile Include="PropertyContainer\TestDependencyPropertyContainerEvents.cs" />
+    <Compile Include="PropertyContainer\TestAttachedPropertyContainerGetSet.cs" />
+    <Compile Include="PropertyContainer\TestDependencyPropertyContainerGetSet.cs" />
     <Compile Include="TestEnumComboBox.cs" />
   </ItemGroup>
   <ItemGroup>
