--- a/Atrico.Lib.WPF/Atrico.Lib.WPF.csproj
+++ b/Atrico.Lib.WPF/Atrico.Lib.WPF.csproj
@@ -97,6 +97,17 @@
     <Compile Include="Properties\AssemblyVersion.cs" />
     <Compile Include="Properties\CommonAssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyContainer\AttachedPropertyContainer.cs" />
+    <Compile Include="PropertyContainer\DependencyPropertyContainer.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Atrico.Lib.Common\Atrico.Lib.Common\Atrico.Lib.Common.csproj">
+      <Project>{983A29AC-8A3B-4D78-81D7-BCAF9B520877}</Project>
+      <Name>Atrico.Lib.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Atrico.Lib.WPF.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
